# HE_Feasibility_SEAL

./: .gitignore  Application.h  Benchmark.ps1  CMakeLists.txt  DependencyManager.ps1  FileStructurePrinter.ps1  PublicTestRunner.ps1  RunSecrets.ps1  SecretTestRunner.ps1  vcpkg.json
VTune/BFV_FALSE/r000hs/: MasterCollectionFlag.infoamplxe  MasterHasStarted.infoamplxe  r000hs.vtune
VTune/BFV_FALSE/r001hs/: MasterHasStarted.infoamplxe  r001hs.vtune
VTune/BFV_FALSE/r002hs/: MasterCollectionFlag.infoamplxe  r002hs.vtune
VTune/BFV_FALSE/r003hs/: MasterCollectionFlag.infoamplxe  r003hs.vtune
VTune/BFV_FALSE/r004hs/: r004hs.vtune
VTune/BFV_TRUE/r000hs/: r000hs.vtune
VTune/BFV_TRUE/r001hs/: r001hs.vtune
VTune/BFV_TRUE/r002hs/: r002hs.vtune
VTune/BFV_TRUE/r003hs/: r003hs.vtune
VTune/BFV_TRUE/r004hs/: r004hs.vtune
VTune/BGV_FALSE/r000hs/: r000hs.vtune
VTune/BGV_FALSE/r001hs/: r001hs.vtune
VTune/BGV_FALSE/r002hs/: r002hs.vtune
VTune/BGV_FALSE/r003hs/: r003hs.vtune
VTune/BGV_FALSE/r004hs/: r004hs.vtune
VTune/BGV_TRUE/r000hs/: r000hs.vtune
VTune/BGV_TRUE/r001hs/: r001hs.vtune
VTune/BGV_TRUE/r002hs/: r002hs.vtune
VTune/BGV_TRUE/r003hs/: r003hs.vtune
VTune/BGV_TRUE/r004hs/: r004hs.vtune
VTune/CKKS_TRUE/r000hs/: r000hs.vtune
VTune/CKKS_TRUE/r001hs/: r001hs.vtune
VTune/CKKS_TRUE/r002hs/: r002hs.vtune
VTune/CKKS_TRUE/r003hs/: MasterCollectionFlag.infoamplxe  MasterHasStarted.infoamplxe  r003hs.vtune
VTune/CKKS_TRUE/r004hs/: r004hs.vtune
VTune/PUBLIC/r000hs/: r000hs.vtune
VTune/PUBLIC/r001hs/: r001hs.vtune
VTune/PUBLIC/r002hs/: MasterCollectionFlag.infoamplxe  MasterHasStarted.infoamplxe  r002hs.vtune
VTune/PUBLIC/r003hs/: MasterCollectionFlag.infoamplxe  MasterHasStarted.infoamplxe  r003hs.vtune
VTune/PUBLIC/r004hs/: r004hs.vtune
VTune/SEAL_CONTEXT/r000hs/: r000hs.vtune
cmake/: ApplicationConfig.cmake  LogConfigurer.cmake  PackageFinder.cmake  ProtoHandler.cmake  TestHandler.cmake
report/: all_benchs.csv  bench_'1'_'False'_10  bench_'1'_'False'_500  bench_'1'_'False'_5000  bench_'1'_'True'_10  bench_'1'_'True'_500  bench_'1'_'True'_5000  bench_'1'_'false'_100  bench_'1'_'false'_1000  bench_'1'_'true'_100  bench_'1'_'true'_1000  bench_'2'_'True'_10  bench_'2'_'True'_500  bench_'2'_'True'_5000  bench_'2'_'true'_100  bench_'2'_'true'_1000  bench_'3'_'False'_10  bench_'3'_'False'_100  bench_'3'_'False'_500  bench_'3'_'False'_5000  bench_'3'_'True'_500  bench_'3'_'True'_5000  bench_'3'_'false'_1000  bench_'3'_'true'_10  bench_'3'_'true'_100  bench_'3'_'true'_1000  bench_contex_10  bench_contex_100  bench_contex_1000  bench_contex_5000  bench_context_10  bench_context_1000  bench_context_500  bench_context_5000  bench_public_10  bench_public_100  bench_public_1000  bench_public_500  bench_public_5000
scripts/: Benchmark.ps1  DependencyManager.ps1  FileStructurePrinter.ps1  PublicTestRunner.ps1  SecretTestRunner.ps1  SecretVTune.ps1  VTune.ps1  file_structure.txt  vcpkg.ps1
secret/: CMakeLists.txt
secret/platform/: CMakeLists.txt
shared/: ApplicationConstants.cpp  CMakeLists.txt
src/: CMakeLists.txt
src/benchmark/: Application.cpp  Application.h  BenchmarkFunctions.cpp  BenchmarkFunctions.h  CMakeLists.txt  Main.cpp
src/benchmark/test/: CMakeLists.txt  GoogleBenchmark.cpp
src/proto/: CMakeLists.txt  PublicCommunication.proto  SecretCommunication.proto  SharedCommunication.proto
src/public/: CMakeLists.txt
src/public/client/: CMakeLists.txt  ClientApplication.cpp  ClientApplication.h  ClientGenerator.cpp  ClientGenerator.h  ClientMain.cpp  ClientManager.cpp  ClientManager.h  ClientServerManager.cpp  ClientServerManager.h  ClientServiceImpl.cpp  ClientServiceImpl.h  ClientkMain.cpp  PublicUser.cpp  PublicUser.h  Tests.cpp
src/public/invoice_clerk/: CMakeLists.txt  InvoiceClerkApplication.cpp  InvoiceClerkApplication.h  InvoiceClerkClientManager.cpp  InvoiceClerkClientManager.h  InvoiceClerkMain.cpp  InvoiceClerkServerManager.cpp  InvoiceClerkServerManager.h  InvoiceClerkServiceImpl.cpp  InvoiceClerkServiceImpl.h
src/public/mobility_provider/: CMakeLists.txt  MobilityProviderApplication.cpp  MobilityProviderApplication.h  MobilityProviderClientManager.cpp  MobilityProviderClientManager.h  MobilityProviderGenerator.cpp  MobilityProviderGenerator.h  MobilityProviderMain.cpp  MobilityProviderServerManager.cpp  MobilityProviderServerManager.h  MobilityProviderServiceImpl.cpp  MobilityProviderServiceImpl.h
src/public/platform/: CMakeLists.txt  PlatformApplication.cpp  PlatformApplication.h  PlatformClientManager.cpp  PlatformClientManager.h  PlatformMain.cpp  PlatformServerManager.cpp  PlatformServerManager.h  PlatformServiceImpl.cpp  PlatformServiceImpl.h
src/public/public_shared/: CMakeLists.txt  PublicBaseApplication.cpp  PublicBaseApplication.h  (+6 more)
src/secret/: CMakeLists.txt
src/secret/client/: CMakeLists.txt  ClientApplication.cpp  ClientApplication.h  ClientGenerator.cpp  ClientGenerator.h  ClientMain.cpp  ClientManager.cpp  ClientManager.h  ClientServerManager.cpp  ClientServerManager.h  ClientServiceImpl.cpp  ClientServiceImpl.h  ClientkMain.cpp  Generator.cpp  Generator.h  SecretUser.cpp  SecretUser.h  Tests.cpp
src/secret/secret_shared/: CMakeLists.txt  CustomSealOperations.cpp  CustomSealOperations.h  SealInfo.cpp  SealInfo.h  SealOperations.cpp  SealOperations.h  SecretBaseApplication.cpp  SecretBaseApplication.h  SecretBaseClientManager.cpp  SecretBaseClientManager.h  SecretBaseCommandLineParser.cpp  SecretBaseCommandLineParser.h  SecretCommandLineInfo.cpp  SecretCommandLineInfo.h
src/secret/secret_shared/test/: CMakeLists.txt  SealUtilTest.cpp
src/shared/: ApplicationConstants.cpp  ApplicationConstants.h  BaseClientManager.cpp  BaseClientManager.h  BaseCommandLineInfo.cpp  BaseCommandLineInfo.h  BaseCommandLineParser.cpp  BaseCommandLineParser.h  BaseServerManager.cpp  BaseServerManager.h  BaseUser.cpp  BaseUser.h  CMakeLists.txt  DefaultLogConfiguration.ini  IApplication.cpp  IApplication.h  TestExecutable.cpp  Timer.cpp  Timer.h  Utils.cpp  Utils.h
src/shared/test/: CMakeLists.txt  SharedDirTest.cpp
(+1222 files in other folders)
